--- a/index.txt.html
+++ b/index.txt.html
@@ -135,6 +135,7 @@
 
 <!-- Thêm sản phẩm khác tại đây -->
 ```
+<p>Nội dung mới để test Git</p>
 
   </div>
 
@@ -144,3 +145,4 @@
   </footer>
 </body>
 </html>
+ 
