--- a/index.html
+++ b/index.html
@@ -1,115 +1,130 @@
 <!DOCTYPE html>
+
 <html lang="vi">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Đăng nhập / Đăng ký</title>
-<style>
-  body {
-    background: #0077a3; font-family: Arial; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0;
-  }
-  .box {
-    background: white; padding: 30px; border-radius: 10px; width: 320px; box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-  }
-  h2 {
-    text-align: center; color: #0077a3;
-  }
-  input {
-    width: 100%; padding: 12px; margin: 10px 0; border: 2px solid #0077a3; border-radius: 8px;
-    animation: blinkBorder 2s infinite;
-    outline: none;
-  }
-  input:focus {
-    border-color: #004d66;
-    animation: none;
-  }
-  button {
-    width: 100%; padding: 12px; background: #0077a3; color: white; border: none; border-radius: 8px;
-    cursor: pointer; font-size: 18px;
-    animation: blinkBg 2s infinite;
-  }
-  button:hover {
-    background: #005f80;
-    animation: none;
-  }
-  #msg {
-    margin-top: 15px; font-weight: bold; min-height: 20px; color: darkred; text-align: center;
-  }
-  @keyframes blinkBorder {
-    0%,100% { border-color: #0077a3; }
-    50% { border-color: #00aaff; }
-  }
-  @keyframes blinkBg {
-    0%,100% { background: #0077a3; }
-    50% { background: #00aaff; }
-  }
-  .toggle-link {
-    color: #0077a3; cursor: pointer; text-align: center; margin-top: 10px; display: block;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>HUNGISME10 - Trang chủ</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; background-color: #f8f8f8; }
+    header, nav, footer { background-color: #0077a3; color: white; padding: 10px; }
+    header { display: flex; justify-content: space-between; align-items: center; }
+    .logo { font-size: 24px; font-weight: bold; }
+    .search-bar { flex-grow: 1; margin: 0 20px; }
+    .search-bar input { width: 100%; padding: 8px; }
+    nav { display: flex; justify-content: center; gap: 15px; background-color: #005f80; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
+    .content { padding: 20px; }
+    .announcement, .product-card, .contact-info {
+      background: white; padding: 20px; border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-bottom: 20px;
+    }
+    .product-card button {
+      background-color: #0077a3; color: white; border: none;
+      padding: 8px 12px; margin-right: 10px; cursor: pointer; border-radius: 6px;
+    }
+    footer { text-align: center; font-size: 14px; background-color: #003d4d; padding: 20px 10px; }
+  </style>
 </head>
 <body>
+  <header>
+    <div class="logo">HUNGISME10</div>
+    <div class="search-bar"><input type="text" placeholder="Tìm kiếm sản phẩm..." /></div>
+    <div><span>0</span> | <span id="userDisplay">Guest</span> | <a href="#" onclick="showLogin()" style="color:white">Login</a></div>
+  </header>
 
-<div class="box">
-  <h2 id="formTitle">Đăng nhập</h2>
-  <form id="form" onsubmit="return handleSubmit(event)">
-    <input type="text" id="username" placeholder="Tên đăng nhập" required />
-    <input type="password" id="password" placeholder="Mật khẩu" required />
-    <button type="submit" id="submitBtn">Đăng nhập</button>
-  </form>
-  <span class="toggle-link" onclick="toggleForm()">Chưa có tài khoản? Đăng ký</span>
-  <div id="msg"></div>
+  <nav>
+    <a href="#">Trang chủ</a><a href="#">Sản phẩm</a><a href="#">Nạp tiền</a><a href="#">Lịch sử</a>
+    <a href="#">Affiliate Program</a><a href="#">Tài liệu API</a>
+  </nav>
+
+  <div class="content">
+    <div class="announcement">
+      <p><strong>🔌 Nạp từ 100k nhận thêm 20% số tiền nạp!</strong></p>
+      <p style="color: darkred">💬 Gia hạn gmail acc clon ff 2k/1 tháng</p>
+      <p style="color: darkred">💬 Mua sll acc clon ff giá 3k/1 acc ib admin</p>
+      <p>📌 Gửi qua zalo cho <strong style="color:blue">admin</strong> để được hoàn tiền</p>
+    </div>
+
+```
+<div class="product-card">
+  <h3>Free Fire</h3>
+  <p>Kho hàng: 16 | Đã bán: 17</p>
+  <p><strong>40.000đ</strong></p>
+  <button>Chi tiết</button><button>Mua ngay</button>
 </div>
 
-<script>
-  let isLogin = true;
+<div class="product-card">
+  <h3>Liên Quân</h3>
+  <p>Acc Random - Kho hàng: 685.044 | Đã bán: 998</p>
+  <p><del>150đ</del> <strong>105đ</strong></p>
+  <button>Chi tiết</button><button>Mua ngay</button>
+</div>
 
-  function toggleForm() {
-    isLogin = !isLogin;
-    document.getElementById('formTitle').innerText = isLogin ? 'Đăng nhập' : 'Đăng ký';
-    document.getElementById('submitBtn').innerText = isLogin ? 'Đăng nhập' : 'Đăng ký';
-    document.getElementById('msg').innerText = '';
-  }
+<div class="contact-info">
+  <h3>Liên hệ</h3>
+  <p>Email: Vuh447973@gmail.com</p><p>SĐT: 0395385906</p>
+</div>
+```
 
-  function handleSubmit(event) {
-    event.preventDefault();
-    const u = document.getElementById('username').value.trim();
-    const p = document.getElementById('password').value.trim();
-    const msg = document.getElementById('msg');
-    msg.style.color = 'darkred';
-    if (!u || !p) {
-      msg.textContent = 'Vui lòng nhập đầy đủ thông tin!';
-      return false;
+  </div>
+
+  <footer>
+    <p>Liên hệ: Vuh447973@gmail.com | Hotline: 0395385906</p>
+    <p>© HUNGISME10 - Website cung cấp tài khoản | Software by KHANGAPI</p>
+  </footer>
+
+  <!-- Đăng nhập -->
+
+  <div style="padding: 20px;">
+    <h3>Đăng nhập</h3>
+    <form id="loginForm" onsubmit="return false;">
+      <input type="text" id="loginUser" placeholder="Tên đăng nhập" required><br><br>
+      <input type="password" id="loginPass" placeholder="Mật khẩu" required><br><br>
+      <button onclick="handleLogin()">Đăng nhập</button>
+      <div id="loginMessage"></div>
+    </form>
+
+```
+<h3>Đăng ký</h3>
+<form id="registerForm" onsubmit="return false;">
+  <input type="text" id="regUser" placeholder="Tên đăng nhập" required><br><br>
+  <input type="password" id="regPass" placeholder="Mật khẩu" required><br><br>
+  <button onclick="handleRegister()">Đăng ký</button>
+  <div id="registerMessage"></div>
+</form>
+```
+
+  </div>
+
+  <script>
+    function handleLogin() {
+      const username = document.getElementById("loginUser").value;
+      const password = document.getElementById("loginPass").value;
+      fetch("login.php", {
+        method: "POST",
+        headers: { "Content-Type": "application/x-www-form-urlencoded" },
+        body: `username=${encodeURIComponent(username)}&password=${encodeURIComponent(password)}`
+      })
+      .then(res => res.text())
+      .then(data => {
+        if (data === "success") window.location.href = "dashboard.php";
+        else document.getElementById("loginMessage").innerText = data;
+      });
     }
-    const url = isLogin ? 'login.php' : 'register.php';
 
-    fetch(url, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-      body: `username=${encodeURIComponent(u)}&password=${encodeURIComponent(p)}`
-    })
-    .then(res => res.text())
-    .then(data => {
-      if (data === 'success') {
-        msg.style.color = 'green';
-        msg.textContent = isLogin ? 'Đăng nhập thành công, chuyển hướng...' : 'Đăng ký thành công, đăng nhập ngay...';
-        setTimeout(() => {
-          if (isLogin) window.location.href = 'dashboard.php';
-          else toggleForm();
-        }, 1500);
-      } else {
-        msg.style.color = 'darkred';
-        msg.textContent = data;
-      }
-    })
-    .catch(() => {
-      msg.style.color = 'darkred';
-      msg.textContent = 'Lỗi kết nối, thử lại sau.';
-    });
-
-    return false;
-  }
-</script>
+    function handleRegister() {
+      const username = document.getElementById("regUser").value;
+      const password = document.getElementById("regPass").value;
+      fetch("register.php", {
+        method: "POST",
+        headers: { "Content-Type": "application/x-www-form-urlencoded" },
+        body: `username=${encodeURIComponent(username)}&password=${encodeURIComponent(password)}`
+      })
+      .then(res => res.text())
+      .then(data => document.getElementById("registerMessage").innerText = data);
+    }
+  </script>
 
 </body>
 </html>
