--- a/index.html
+++ b/index.html
@@ -1,130 +1,175 @@
-<!DOCTYPE html>
-
+<!doctype html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HUNGISME10 - Trang chủ</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; background-color: #f8f8f8; }
-    header, nav, footer { background-color: #0077a3; color: white; padding: 10px; }
-    header { display: flex; justify-content: space-between; align-items: center; }
-    .logo { font-size: 24px; font-weight: bold; }
-    .search-bar { flex-grow: 1; margin: 0 20px; }
-    .search-bar input { width: 100%; padding: 8px; }
-    nav { display: flex; justify-content: center; gap: 15px; background-color: #005f80; }
-    nav a { color: white; text-decoration: none; font-weight: bold; }
-    .content { padding: 20px; }
-    .announcement, .product-card, .contact-info {
-      background: white; padding: 20px; border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-bottom: 20px;
-    }
-    .product-card button {
-      background-color: #0077a3; color: white; border: none;
-      padding: 8px 12px; margin-right: 10px; cursor: pointer; border-radius: 6px;
-    }
-    footer { text-align: center; font-size: 14px; background-color: #003d4d; padding: 20px 10px; }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Tool Tài Xỉu 🎲</title>
+<style>
+  body {
+    margin: 0; padding: 0;
+    display: flex; flex-direction: column;
+    align-items: center; justify-content: center;
+    height: 100vh;
+    background: linear-gradient(45deg, #001f3f, #0074D9);
+    color: #00FF00;
+    font-family: 'Arial', sans-serif;
+    text-align: center;
+    text-shadow: 2px 2px 10px rgba(0, 255, 0, 0.8);
+    animation: ledBorder 3s infinite alternate;
+  }
+  @keyframes ledBorder {
+    0% { box-shadow: 0 0 10px red; }
+    20% { box-shadow: 0 0 10px orange; }
+    40% { box-shadow: 0 0 10px yellow; }
+    60% { box-shadow: 0 0 10px green; }
+    80% { box-shadow: 0 0 10px blue; }
+    100% { box-shadow: 0 0 10px violet; }
+  }
+  h1 {
+    font-size: 22px;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: 3px solid #00FF00;
+    animation: glow 1.5s infinite alternate;
+  }
+  @keyframes glow {
+    0% { text-shadow: 2px 2px 10px rgba(0, 255, 0, 0.8); }
+    100% { text-shadow: 2px 2px 20px rgba(0, 255, 0, 1); }
+  }
+  input {
+    width: 250px;
+    padding: 10px;
+    font-size: 16px;
+    border: 2px solid #00FF00;
+    border-radius: 5px;
+    background: black;
+    color: #00FF00;
+    text-align: center;
+    margin-top: 20px;
+  }
+  button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: 2px solid #00FF00;
+    background: black;
+    color: #00FF00;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  button:hover {
+    background: #00FF00;
+    color: black;
+  }
+  #error {
+    color: red;
+    font-size: 18px;
+    margin-top: 10px;
+  }
+  .circle-container {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 20px;
+  }
+  .circle {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 3px solid #00FF00;
+    opacity: 0.3;
+  }
+  .tai { background: black; }
+  .xiu { background: white; }
+  @keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 0.3; }
+    100% { opacity: 1; }
+  }
+  .footer {
+    position: absolute;
+    bottom: 10px;
+    font-size: 18px;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 5px 15px;
+    border-radius: 5px;
+    border: 2px solid #00FF00;
+  }
+</style>
 </head>
 <body>
-  <header>
-    <div class="logo">HUNGISME10</div>
-    <div class="search-bar"><input type="text" placeholder="Tìm kiếm sản phẩm..." /></div>
-    <div><span>0</span> | <span id="userDisplay">Guest</span> | <a href="#" onclick="showLogin()" style="color:white">Login</a></div>
-  </header>
+<h1>CHÀO MỪNG BẠN ĐÃ VÀO ĐƯỢC TOOL TÀI XỈU 🎲 CỦA BỐ HÙNGISME10</h1>
 
-  <nav>
-    <a href="#">Trang chủ</a><a href="#">Sản phẩm</a><a href="#">Nạp tiền</a><a href="#">Lịch sử</a>
-    <a href="#">Affiliate Program</a><a href="#">Tài liệu API</a>
-  </nav>
+<input type="text" id="md5Input" placeholder="Nhập mã MD5" />
+<button onclick="predict()">Dự đoán</button>
+<button id="musicToggle" onclick="toggleMusic()">Tắt nhạc 🔈</button>
+<p id="error"></p>
 
-  <div class="content">
-    <div class="announcement">
-      <p><strong>🔌 Nạp từ 100k nhận thêm 20% số tiền nạp!</strong></p>
-      <p style="color: darkred">💬 Gia hạn gmail acc clon ff 2k/1 tháng</p>
-      <p style="color: darkred">💬 Mua sll acc clon ff giá 3k/1 acc ib admin</p>
-      <p>📌 Gửi qua zalo cho <strong style="color:blue">admin</strong> để được hoàn tiền</p>
-    </div>
-
-```
-<div class="product-card">
-  <h3>Free Fire</h3>
-  <p>Kho hàng: 16 | Đã bán: 17</p>
-  <p><strong>40.000đ</strong></p>
-  <button>Chi tiết</button><button>Mua ngay</button>
+<div class="circle-container">
+  <div id="tai" class="circle tai"></div>
+  <div id="xiu" class="circle xiu"></div>
 </div>
 
-<div class="product-card">
-  <h3>Liên Quân</h3>
-  <p>Acc Random - Kho hàng: 685.044 | Đã bán: 998</p>
-  <p><del>150đ</del> <strong>105đ</strong></p>
-  <button>Chi tiết</button><button>Mua ngay</button>
+<div class="footer">
+  CHỦ TOOL HUNGISME10<br>
+  TELEGRAM: HUNGISME10<br>
+  TIKTOK: HUNGISME10<br>
+  FACEBOOK: HUNGVAN2009
 </div>
 
-<div class="contact-info">
-  <h3>Liên hệ</h3>
-  <p>Email: Vuh447973@gmail.com</p><p>SĐT: 0395385906</p>
-</div>
-```
+<audio id="bgMusic" src="https://cdn.pixabay.com/download/audio/2022/03/24/audio_51d3ec3d2f.mp3?filename=pop-dance-14581.mp3" autoplay loop></audio>
 
-  </div>
+<script>
+const bgMusic = document.getElementById("bgMusic");
+const musicToggle = document.getElementById("musicToggle");
 
-  <footer>
-    <p>Liên hệ: Vuh447973@gmail.com | Hotline: 0395385906</p>
-    <p>© HUNGISME10 - Website cung cấp tài khoản | Software by KHANGAPI</p>
-  </footer>
+function toggleMusic() {
+  if (bgMusic.paused) {
+    bgMusic.play();
+    musicToggle.textContent = "Tắt nhạc 🔈";
+  } else {
+    bgMusic.pause();
+    musicToggle.textContent = "Bật nhạc 🔇";
+  }
+}
 
-  <!-- Đăng nhập -->
+function isValidMD5(md5) {
+  return /^[a-fA-F0-9]{32}$/.test(md5);
+}
 
-  <div style="padding: 20px;">
-    <h3>Đăng nhập</h3>
-    <form id="loginForm" onsubmit="return false;">
-      <input type="text" id="loginUser" placeholder="Tên đăng nhập" required><br><br>
-      <input type="password" id="loginPass" placeholder="Mật khẩu" required><br><br>
-      <button onclick="handleLogin()">Đăng nhập</button>
-      <div id="loginMessage"></div>
-    </form>
+function hexXOR(md5) {
+  let result = 0;
+  for (let i = 0; i < md5.length; i += 2) {
+    result ^= parseInt(md5.substr(i, 2), 16);
+  }
+  return result % 2 === 0 ? "Tài" : "Xỉu";
+}
 
-```
-<h3>Đăng ký</h3>
-<form id="registerForm" onsubmit="return false;">
-  <input type="text" id="regUser" placeholder="Tên đăng nhập" required><br><br>
-  <input type="password" id="regPass" placeholder="Mật khẩu" required><br><br>
-  <button onclick="handleRegister()">Đăng ký</button>
-  <div id="registerMessage"></div>
-</form>
-```
+function predict() {
+  let input = document.getElementById("md5Input").value.trim();
+  let errorText = document.getElementById("error");
+  let tai = document.getElementById("tai");
+  let xiu = document.getElementById("xiu");
 
-  </div>
+  if (!isValidMD5(input)) {
+    errorText.textContent = "Lỗi 🆘: Mã MD5 không hợp lệ!";
+    tai.style.animation = "";
+    xiu.style.animation = "";
+    return;
+  }
 
-  <script>
-    function handleLogin() {
-      const username = document.getElementById("loginUser").value;
-      const password = document.getElementById("loginPass").value;
-      fetch("login.php", {
-        method: "POST",
-        headers: { "Content-Type": "application/x-www-form-urlencoded" },
-        body: `username=${encodeURIComponent(username)}&password=${encodeURIComponent(password)}`
-      })
-      .then(res => res.text())
-      .then(data => {
-        if (data === "success") window.location.href = "dashboard.php";
-        else document.getElementById("loginMessage").innerText = data;
-      });
-    }
+  errorText.textContent = "";
+  let result = hexXOR(input);
 
-    function handleRegister() {
-      const username = document.getElementById("regUser").value;
-      const password = document.getElementById("regPass").value;
-      fetch("register.php", {
-        method: "POST",
-        headers: { "Content-Type": "application/x-www-form-urlencoded" },
-        body: `username=${encodeURIComponent(username)}&password=${encodeURIComponent(password)}`
-      })
-      .then(res => res.text())
-      .then(data => document.getElementById("registerMessage").innerText = data);
-    }
-  </script>
-
+  if (result === "Tài") {
+    tai.style.animation = "blink 1s infinite";
+    xiu.style.animation = "";
+  } else {
+    xiu.style.animation = "blink 1s infinite";
+    tai.style.animation = "";
+  }
+}
+</script>
 </body>
 </html>
