--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 <input type="text" id="md5Input" placeholder="Nhập mã MD5" />
 <button onclick="predict()">Dự đoán</button>
-<button id="musicToggle" onclick="toggleMusic()">Tắt nhạc 🔈</button>
+<button id="musicToggle" onclick="toggleMusic()">Bật nhạc 🔇</button>
 <p id="error"></p>
 
 <div class="circle-container">
@@ -118,7 +118,7 @@
   FACEBOOK: HUNGVAN2009
 </div>
 
-<audio id="bgMusic" src="https://cdn.pixabay.com/download/audio/2022/03/24/audio_51d3ec3d2f.mp3?filename=pop-dance-14581.mp3" autoplay loop></audio>
+<audio id="bgMusic" src="https://cdn.pixabay.com/download/audio/2022/03/24/audio_51d3ec3d2f.mp3?filename=pop-dance-14581.mp3" loop></audio>
 
 <script>
 const bgMusic = document.getElementById("bgMusic");
